force-app/main/default/objects/Kinetic_Job__c/Kinetic_Job__c.object-meta.xml
<CustomObject>
    <label>Kinetic Job</label>
    <nameField>
        <displayFormat>KJ-{0000000}</displayFormat>
        <label>Kinetic Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kinetic Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>