force-app/main/default/objects/Kinetic_Job__c/fields/Complete_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Complete_Percentage__c</fullName>
    <formula>Number_Of_Completed_Form__c / Total_Invitation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>