force-app/main/default/objects/Kinetic_Job__c/fields/Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Email_Template__c</fullName>
    <label>Email Template</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>