force-app/main/default/objects/Kinetic_Job__c/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>