force-app/main/default/objects/Kinetic_Job__c/fields/Kinetic_Form__c.field-meta.xml
<CustomField>
    <fullName>Kinetic_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kinetic Form</label>
    <referenceTo>Kinetic_Form__c</referenceTo>
    <relationshipLabel>Kinetic Jobs</relationshipLabel>
    <relationshipName>Kinetic_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>