force-app/main/default/objects/Kinetic_Job__c/fields/Number_Of_Sent_to_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Sent_to_Recipient__c</fullName>
    <label># Sent to Recipient</label>
    <summaryFilterItems>
        <field>Survey_Invitation__c.Stage__c</field>
        <operation>equals</operation>
        <value>Sent to recipient</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Invitation__c.Kinetic_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>