force-app/main/default/objects/Kinetic_Job__c/fields/Sent_to_Recipients_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Recipients_Percentage__c</fullName>
    <formula>Number_Of_Sent_to_Recipient__c / Total_Invitation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Sent to Recipients</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>