force-app/main/default/objects/Kinetic_Job__c/fields/Total_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Total_Invitation__c</fullName>
    <label># Total Invitation</label>
    <summaryForeignKey>Survey_Invitation__c.Kinetic_Job__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>