force-app/main/default/objects/Kinetic_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Invitation__c</columns>
    <columns>Number_Of_Completed_Form__c</columns>
    <columns>Number_Of_Sent_to_Recipient__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>